--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "e2e": "ng e2e",
     "electron": "ng build --prod --base-href ./ && tsc --p electron && electron .",
     "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=src/ --ignore=release-builds/",
-    "package-win": "electron-packager . Vrapeutic --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \"  --ignore=src/ "    
+    "package-win": "electron-packager . Vrapeutic --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \"  --ignore=src/ "
   },
   "private": true,
   "dependencies": {
@@ -29,7 +29,9 @@
     "@ionic/angular": "^4.3.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "ng2-charts": "^2.2.3",
     "ngx-electron": "^2.1.1",
     "pusher-js": "^4.4.0",
     "rxjs": "~6.3.3",
@@ -37,7 +39,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
