Update core for rails app

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-    "apiUrl": "https://dashboard.myvrapeutic.com/api",
+    "apiUrl": "http://localhost:3000/api/v1",
     "maxTry":0,
     "nativePaltform": "electron",
     "env": "dev",
