--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ionic/angular": "^4.3.0",
+    "@ionic/angular": "^4.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "adbkit": "^2.11.1",
+    "body-parser": "^1.19.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "enum": "^2.5.0",
+    "express": "^4.17.1",
     "ng2-charts": "^2.2.3",
     "ngx-electron": "^2.1.1",
     "pusher-js": "^4.4.0",
     "rxjs": "~6.3.3",
+    "shortid": "^2.2.14",
+    "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
