--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^2.5.4",
     "enum": "^2.5.0",
     "express": "^4.17.1",
+    "internal-ip": "^4.3.0",
     "ng2-charts": "^2.2.3",
     "ngx-electron": "^2.1.1",
     "pusher-js": "^4.4.0",
