--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron": "ng build --prod --base-href ./ && tsc --p electron && electron .",
-    "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=src/ --ignore=release-builds/",
-    "package-win": "electron-packager . Vrapeutic --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \"  --ignore=src/ "
+    "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=release-builds/",
+    "package-win": "electron-packager . Vrapeutic --overwrite --asar=true --platform=win32 --arch=ia32 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \" "
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "^7.2.14",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ionic/angular": "^4.7.1",
+    "@angular/animations": "^8.2.2",
+    "@angular/common": "^8.2.2",
+    "@angular/compiler": "^8.2.2",
+    "@angular/core": "^8.2.2",
+    "@angular/forms": "^8.2.2",
+    "@angular/http": "^7.2.15",
+    "@angular/platform-browser": "^8.2.2",
+    "@angular/platform-browser-dynamic": "^8.2.2",
+    "@angular/router": "^8.2.2",
+    "@ionic/angular": "^4.7.4",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "adbkit": "^2.11.1",
@@ -38,7 +38,6 @@
     "internal-ip": "^4.3.0",
     "ng2-charts": "^2.2.3",
     "ngx-electron": "^2.1.1",
-    "nice-try": "^2.0.0",
     "pusher-js": "^4.4.0",
     "rxjs": "~6.3.3",
     "shortid": "^2.2.14",
@@ -47,18 +46,18 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.3.8",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@ionic/angular-toolkit": "^1.5.1",
+    "@angular-devkit/build-angular": "^0.802.2",
+    "@angular/cli": "^8.2.2",
+    "@angular/compiler-cli": "^8.2.2",
+    "@angular/language-service": "^8.2.2",
+    "@ionic/angular-toolkit": "^2.0.0",
     "@types/electron": "^1.6.10",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^12.7.2",
     "codelyzer": "~4.5.0",
-    "electron": "^4.1.4",
-    "electron-packager": "^13.1.1",
+    "electron": "^6.0.2",
+    "electron-packager": "^14.0.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -69,6 +68,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.5.3"
   }
 }
