--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.7.2",
+    "capture-console": "^1.0.1",
     "codelyzer": "~4.5.0",
     "electron": "^6.0.2",
     "electron-packager": "^14.0.4",
