--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.2",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.2",
     "@angular/compiler": "^8.2.2",
     "@angular/core": "^8.2.2",
     "@angular/forms": "^8.2.2",
     "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "^8.2.2",
     "@angular/router": "^8.2.2",
@@ -36,6 +38,7 @@
     "core-js": "^2.5.4",
     "enum": "^2.5.0",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "internal-ip": "^4.3.0",
     "ng2-charts": "^2.2.3",
     "ngx-electron": "^2.1.1",
