--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "e2e": "ng e2e",
     "release": "electron-builder",
     "electron": "ng build --prod --base-href ./ && tsc --p electron  && electron .",
+    "build-electron": "ng build --prod --base-href ./ && tsc --p electron",
     "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=release-builds/",
     "package-win": "electron-packager . Vrapeutic --overwrite --asar=false --platform=win32 --arch=x64 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \" "
   },
