--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Hossam Eldeen Hawary",
   "copyright": "All rights reserved © VRapeutic",
   "main": "electron/dist/main.js",
@@ -25,6 +25,10 @@
     "productName": "VRapeutic Desktop",
     "copyright": "All rights reserved © VRapeutic",
     "publish": "github",
+    "asar": false,
+    "files": [
+      "dist/vrapeutic-desktop/*"
+    ],
     "directories": {
       "buildResources": "build"
     },
