--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "Hossam Eldeen Hawary",
   "copyright": "All rights reserved © VRapeutic",
   "main": "electron/dist/main.js",
@@ -25,12 +25,10 @@
     "productName": "VRapeutic Desktop",
     "copyright": "All rights reserved © VRapeutic",
     "publish": "github",
-    "asar": false,
-    "files": [
-      "dist/vrapeutic-desktop/*"
-    ],
+    "asar": true,
     "directories": {
-      "buildResources": "build"
+      "buildResources": "build",
+      "output": "release-builds"
     },
     "dmg": {
       "contents": [
@@ -75,6 +73,7 @@
     "capture-console": "^1.0.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "electron-updater": "^4.2.0",
     "enum": "^2.5.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
