Configure publish options in package.json file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "Hossam Eldeen Hawary",
   "copyright": "All rights reserved © VRapeutic",
   "main": "electron/dist/main.js",
@@ -20,11 +20,18 @@
     "package-win": "electron-packager . Vrapeutic --overwrite --asar=false --platform=win32 --arch=x64 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \" "
   },
   "repository": "https://github.com/Hossam-Hawary/vrapeutic-desktop",
+  "publish": "github",
   "build": {
     "appId": "com.myvrapeutic.vrapeutic-desktop",
     "productName": "VRapeutic Desktop",
     "copyright": "All rights reserved © VRapeutic",
-    "publish": "github",
+      "publish": [
+        {
+          "provider": "github",
+          "owner": "Hossam-Hawary",
+          "repo": "vrapeutic-desktop"
+        }
+      ],
     "asar": true,
     "directories": {
       "buildResources": "build",
