--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "author": {
     "name": "Hossam Eldeen Hawary",
     "email": "hossameldeen.hawary@gmail.com",
@@ -14,7 +14,8 @@
     "url": "https://github.com/Hossam-Hawary/vrapeutic-desktop/issues"
   },
   "keywords": [
-    "appium"
+    "vr",
+    "VRapeutic"
   ],
   "assetsPath": "assets",
   "homepage": "https://github.com/Hossam-Hawary/vrapeutic-desktop",
@@ -109,7 +110,11 @@
     "capture-console": "^1.0.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "electron-debug": "^3.0.0",
+    "electron-log": "^3.0.1",
+    "electron-settings": "^2.2.4",
     "electron-updater": "^4.2.0",
+    "fix-path": "^2.1.0",
     "enum": "^2.5.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
@@ -135,8 +140,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.7.2",
     "codelyzer": "~4.5.0",
-    "electron": "^6.0.2",
+    "electron": "^7.1.2",
     "electron-builder": "^22.1.0",
+    "electron-builder-lib": "^20.15.3",
+    "electron-devtools-installer": "^2.2.3",
     "electron-packager": "^14.0.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -149,8 +156,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5",
-    "cross-env": "^6.0.0",
-    "electron-builder-lib": "^20.15.3",
-    "electron-devtools-installer": "^2.2.3"
+    "cross-env": "^6.0.0"
+  },
+  "engines": {
+    "node": ">=10.x",
+    "npm": ">=5.x"
   }
 }
