Desktop app can pull the latest version of VR modules
- Check latest version & installed version of modules
- download latest version if not downloaded yet
- unzip downloaded file
- save version metadata in user storage

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -20,6 +20,10 @@
   },
   "files": [
     "server",
-    "main"
+    "main",
+    "vr_module_runner",
+    "auto_update",
+    "modules_update",
+    "store"
   ],
 }
