Fix not quit app after windows closed

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "author": "Hossam Eldeen Hawary <hossameldeen.hawary@gmail.com> (https://github.com/Hossam-Hawary)",
   "copyright": "All rights reserved © VRapeutic",
   "license": "APACHE2",
@@ -108,10 +108,10 @@
     "capture-console": "^1.0.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
-    "electron-debug": "^3.0.0",
-    "electron-log": "^3.0.1",
-    "electron-settings": "^2.2.4",
-    "electron-updater": "^4.2.0",
+    "electron-debug": "^3.0.1",
+    "electron-log": "^4.0.6",
+    "electron-settings": "^3.2.0",
+    "electron-updater": "^4.2.2",
     "enum": "^2.5.0",
     "express": "^4.17.1",
     "fix-path": "^2.1.0",
@@ -119,7 +119,7 @@
     "internal-ip": "^4.3.0",
     "logger-electron": "^1.2.8",
     "ng2-charts": "^2.2.3",
-    "ngx-electron": "^2.1.1",
+    "ngx-electron": "^2.2.0",
     "pusher-js": "^4.4.0",
     "rxjs": "~6.3.3",
     "shortid": "^2.2.14",
@@ -141,10 +141,10 @@
     "@types/node": "^12",
     "codelyzer": "~4.5.0",
     "cross-env": "^6.0.0",
-    "electron": "6.0.12",
-    "electron-builder": "^21.2.0",
-    "electron-builder-lib": "^20.15.3",
-    "electron-packager": "^14.0.4",
+    "electron": "^8.0.1",
+    "electron-builder": "^22.3.2",
+    "electron-builder-lib": "^20.23.1",
+    "electron-packager": "^14.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
