--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.1.10",
+  "version": "0.2.0",
   "author": "Hossam Eldeen Hawary <hossameldeen.hawary@gmail.com> (https://github.com/Hossam-Hawary)",
   "copyright": "All rights reserved © VRapeutic",
   "license": "APACHE2",
@@ -24,8 +24,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "release": "electron-builder",
-    "electron": "cross-env NODE_ENV=production ng build --prod --base-href ./ && tsc --p electron  && electron .",
-    "build-electron": "NODE_ENV=production ng build --prod --base-href ./ && tsc --p electron",
+    "electron": "cross-env NODE_ENV=production ng build --base-href ./ && tsc --p electron  && electron .",
+    "build-electron": "NODE_ENV=production ng build --base-href ./ && tsc --p electron",
     "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=release-builds/",
     "package-win": "electron-packager . Vrapeutic --overwrite --asar=false --platform=win32 --arch=x64 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \" "
   },
@@ -115,11 +115,15 @@
     "enum": "^2.5.0",
     "express": "^4.17.1",
     "fix-path": "^2.1.0",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
     "internal-ip": "^4.3.0",
     "logger-electron": "^1.2.8",
     "ng2-charts": "^2.2.3",
+    "ngx-datetime-range-picker": "^2.0.2",
     "ngx-electron": "^2.2.0",
+    "npm": "^6.14.7",
     "pusher-js": "^4.4.0",
     "rxjs": "~6.3.3",
     "shortid": "^2.2.14",
@@ -141,7 +145,7 @@
     "@types/node": "^12",
     "codelyzer": "~4.5.0",
     "cross-env": "^6.0.0",
-    "electron": "^8.0.1",
+    "electron": "8.2.4",
     "electron-builder": "^22.3.2",
     "electron-builder-lib": "^20.23.1",
     "electron-packager": "^14.2.1",
@@ -155,6 +159,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "3.9.7"
   }
 }
