--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vrapeutic-desktop",
   "productName": "VRapeutic Desktop",
   "description": "VRapeutic desktop app for managing modules",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Hossam Eldeen Hawary <hossameldeen.hawary@gmail.com> (https://github.com/Hossam-Hawary)",
   "copyright": "All rights reserved © VRapeutic",
   "license": "APACHE2",
@@ -24,8 +24,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "release": "electron-builder",
-    "electron": "cross-env NODE_ENV=production ng build --base-href ./ && tsc --p electron  && electron .",
-    "build-electron": "NODE_ENV=production ng build --base-href ./ && tsc --p electron",
+    "electron": "cross-env NODE_ENV=production ng build --prod --base-href ./ && tsc --p electron  && electron .",
+    "build-electron": "NODE_ENV=production ng build  --prod --base-href ./ && tsc --p electron",
     "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=release-builds/",
     "package-win": "electron-packager . Vrapeutic --overwrite --asar=false --platform=win32 --arch=x64 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \" "
   },
